Fix bug on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -35,8 +35,8 @@ h1 {
 }
 
 .projects-title {
-    padding-top: 3%;
-    padding-bottom: 0.1%;
+    padding-top: 1%;
+    padding-bottom: 2%;
     text-align: center;
     font-size: 50px !important;
     font-weight: 600 !important;
